minor fix: align of nav

--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,7 @@ a:active {
   nav {
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
 
   .nav-links {
